@@ -2,6 +2,7 @@
 Version 4.0.1.3 'Severard':
 	- Logfile reset on SIGHUP
 	(Gustavo Garcia suggestion).
+	- Log reset CLi command.
 
 06/06/2014 Oleg Moskalenko <mom040267@gmail.com>
 Version 4.0.1.2 'Severard':
